--- a/_config.yml
+++ b/_config.yml
@@ -18,11 +18,10 @@
 ##############################
 text_skin: default # "default" (default), "dark", "forest", "ocean", "chocolate", "orange"
 highlight_theme: default # "default" (default), "tomorrow", "tomorrow-night", "tomorrow-night-eighties", "tomorrow-night-blue", "tomorrow-night-bright"
-url     : # the base hostname & protocol for your site e.g. https://www.someone.com
+url     : https://www.chethanmandya.com
 baseurl : # does not include hostname
 title   : Chethan Mandya
-description: > # this means to ignore newlines until "Language & timezone"
-  Your Site Description
+description: It is not the language that makes programs appear simple. It is the programmer that make the language appear simple!
 
 
 ## => Language and Timezone
@@ -36,8 +35,8 @@ timezone: # see https://en.wikipedia.org/wiki/List_of_tz_database_time_zones for
 author:
   type      : # "person" (default), "organization"
   name      : Chethan
-  url       :
-  avatar    : 
+  url       : https://github.com/chethu/Chethan/blob/master/assets/Chethan_best_viewing_4_3.jpg
+  avatar    : https://github.com/chethu/Chethan/blob/master/assets/Chethan_best_viewing_4_3.jpg
   bio       : Android Developer
   email     :
   facebook  : chethan.mandya.5
