--- a/_config.yml
+++ b/_config.yml
@@ -125,10 +125,10 @@ comments:
   ## Gitalk
   # please refer to https://github.com/gitalk/gitalk for more info.
   gitalk:
-    clientID    : # GitHub Application Client ID
-    clientSecret: # GitHub Application Client Secret
-    repository  : # GitHub repo
-    owner       : # GitHub repo owner
+    clientID    : 1f9f9742f62d3cc51082
+    clientSecret: a1b9c370bab6fbacf0b9f4603ead17ed7b98be44
+    repository  : https://github.com/chethu
+    owner       : Chethan
     admin: # GitHub repo owner and collaborators, only these guys can initialize GitHub issues, IT IS A LIST.
       # - your GitHub Id
 
